@@ -106,7 +106,7 @@ class ActivityEmail(object):
 
         return u'[%s] %s: %s' % (
             self.project.get_full_name(),
-            group.get_level_display().upper(),
+            group.get_level_display(),
             group.title
         )
 
