@@ -23,12 +23,26 @@ class EventTest(TestCase):
             event_id='a' * 32, group=self.group, tags={'level': 'info'},
             message='Foo bar')
         event2 = self.create_event(
-            event_id='b' * 32, group=self.group, tags={'level': 'error'},
+            event_id='b' * 32, group=self.group, tags={'level': 'ERROR'},
             message='Foo bar')
         self.group.level = 30
 
-        assert event1.get_email_subject() == '[foo Bar] INFO: Foo bar'
+        assert event1.get_email_subject() == '[foo Bar] info: Foo bar'
         assert event2.get_email_subject() == '[foo Bar] ERROR: Foo bar'
+
+    def test_email_subject_with_template(self):
+        self.project.update_option('mail:subject_template', '$project ${tag:environment}@${tag:release} $$ $title ${tag:invalid} $invalid')
+
+        event1 = self.create_event(
+            event_id='a' * 32, group=self.group, tags={
+                'level': 'info',
+                'environment': 'production',
+                'sentry:release': '0'
+            },
+            message='baz',
+        )
+
+        assert event1.get_email_subject() == 'foo Bar production@0 $ baz ${tag:invalid} $invalid'
 
 
 class EventGetLegacyMessageTest(TestCase):
