@@ -12,6 +12,7 @@ Version 8.13 (Unreleased)
 - The legacy API keys feature is now disabled by default.
 - Show Images Loaded section for cocoa events with version number.
 - Fixed bug where workflow notification subject may not include a custom email prefix.
+- Added configurable subject templates for individual alert emails (`mail:subject_template` option).
 
 Schema Changes
 ~~~~~~~~~~~~~~
